--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
   --highlight-color:  darkmagenta;
     color-scheme: light dark;
 }
+body {
+  background-color: white;
+}
 .nav-container {
   width: 100%;
   height: 100px;
@@ -81,7 +84,7 @@ nav button {
   border-radius: 3px;
 }
 .first-section {
-  background-color: rgb(236, 236, 236);
+  background-color:rgb(236, 236, 236);
 }
 .first-section img {
   display: block;
@@ -288,7 +291,7 @@ body {
 }
 /* ////////////////////////SECTION FOUR */
 #sectionFour {
-  background-color: whitesmoke;
+  background-color: white;
   padding-bottom:   8rem;
 }
 .sectionFour-container {
